--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -1,1 +1,9 @@
+<div class="application__navbar">
+  <div class="application__username">
+    {{userName}}
+  </div>
+  <div class="application__money">
+    {{userMoney}}
+  </div>
+</div>
 {{outlet}}
