--- a/app/components/class-list/template.hbs
+++ b/app/components/class-list/template.hbs
@@ -1,3 +1,3 @@
 {{#each classes as |class|}}
-  {{expandable-class class=class}}
+  {{expandable-class class=class onNewLesson=(action 'onNewLesson')}}
 {{/each}}
