--- a/app/components/instructor-class-instance/template.hbs
+++ b/app/components/instructor-class-instance/template.hbs
@@ -1,1 +1,1 @@
-{{date instance.starttime}} for {{length instance.lengthseconds}}
+"{{instance.shortdesc}}" - {{date instance.starttime}} for {{length instance.lengthseconds}}
