--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -2,12 +2,11 @@
   <p class="index__title">Welcome to EFitness!</p>
 
   <div class="index__buttonlist">
-    {{#round-button onPress=(action 'signUp')}}Sign Up{{/round-button}}
     {{#round-button onPress=(action 'whatsUp')}}What's Happening?{{/round-button}}
+    {{#round-button onPress=(action 'pastClasses')}}My Past Classes{{/round-button}}
   </div>
 
   <div class="index__filler"></div>
 
-  <p class="index__justapreview">Explore...</p>
   {{event-cycler classes=model.classes}}
 </div>
